--- a/config.json
+++ b/config.json
@@ -11,5 +11,6 @@
         "reportes": "1356308200235864094",
         "comandos": "1356308249888165993"
     },
-    "server" : "1356256796465172672"
+    "server" : "1356256796465172672",
+    "sharp" : "356952057531596800"
 }
