--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
+    "elo-js": "^1.0.1",
     "fs": "^0.0.1-security"
   }
 }
