--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "elo-js": "^1.0.1",
+    "elo-rank": "^1.0.4",
     "fs": "^0.0.1-security"
   }
 }
